Make ConvolverNode conform to spec

Update ConvolverNode to handle inputs and responses according to the
spec. This basically means mono source with mono response produces a
mono output.  All other supported configurations produce a stereo output.

Spec: https://webaudio.github.io/web-audio-api/#Convolution-channel-configurations
and https://github.com/WebAudio/web-audio-api/pull/1176

BUG=639330
TEST=convolver-channel-modes.html

Review-Url: https://codereview.chromium.org/2732523003
Cr-Commit-Position: refs/heads/master@{#461140}

Former-commit-id: 44c111b0f7bd9a9bb044c527162bb5bc7e6c0250